compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__negate_string.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "!\"Hello Gleam\""
---
----- SOURCE CODE
!"Hello Gleam"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:2
  │
1 │ !"Hello Gleam"
  │  ^^^^^^^^^^^^^

Expected type:

    Bool

Found type:

    String
